RESOLVED FIXED197961
[PlayStation] Don't call fcntl.
https://bugs.webkit.org/show_bug.cgi?id=197961
Summary [PlayStation] Don't call fcntl.
Ross Kirsling
Reported 2019-05-16 13:38:14 PDT
[PlayStation] Don't call fcntl.
Attachments
Patch (2.73 KB, patch)
2019-05-16 13:39 PDT, Ross Kirsling
no flags
Patch (15.19 KB, patch)
2019-05-21 16:55 PDT, Ross Kirsling
no flags
Patch (15.20 KB, patch)
2019-05-21 17:04 PDT, Ross Kirsling
no flags
Ross Kirsling
Comment 1 2019-05-16 13:39:30 PDT
Ross Kirsling
Comment 2 2019-05-16 13:40:50 PDT
Simple patch, but we need to come up with a better #if to use before landing.
Stephan Szabo
Comment 3 2019-05-20 08:21:01 PDT
We probably should also be protecting the #ifdef F_DUPFD_CLOEXEC case in dupCloseOnExec since we could get the define while still not being allowed to call fcntl.
Ross Kirsling
Comment 4 2019-05-21 16:55:53 PDT Comment hidden (obsolete)
EWS Watchlist
Comment 5 2019-05-21 16:57:11 PDT Comment hidden (obsolete)
Ross Kirsling
Comment 6 2019-05-21 17:04:37 PDT
EWS Watchlist
Comment 7 2019-05-21 17:06:12 PDT
Attachment 370358 [details] did not pass style-queue: ERROR: Source/WTF/wtf/unix/UniStdExtrasUnix.cpp:28: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/WTF/wtf/playstation/UniStdExtrasPlayStation.cpp:28: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 2 in 12 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 8 2019-05-21 17:54:46 PDT
Comment on attachment 370358 [details] Patch Clearing flags on attachment: 370358 Committed r245606: <https://trac.webkit.org/changeset/245606>
WebKit Commit Bot
Comment 9 2019-05-21 17:54:47 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 10 2019-05-21 17:55:28 PDT
Note You need to log in before you can comment on or make changes to this bug.