[PlayStation] Don't call fcntl. https://bugs.webkit.org/show_bug.cgi?id=197961

Reviewed by Fujii Hironori.

Source/JavaScriptCore:

* inspector/remote/socket/posix/RemoteInspectorSocketPOSIX.cpp:
(Inspector::Socket::setup):
Use WTF::setCloseOnExec and WTF::setNonBlock.

Source/WebKit:

* Platform/IPC/unix/ConnectionUnix.cpp:
(IPC::Connection::open):
Use WTF::setNonBlock.

Source/WTF:

* wtf/PlatformGTK.cmake:
* wtf/PlatformJSCOnly.cmake:
* wtf/PlatformPlayStation.cmake:
* wtf/PlatformWPE.cmake:
* wtf/UniStdExtras.h:
* wtf/playstation/UniStdExtrasPlayStation.cpp: Added.
(WTF::setCloseOnExec):
(WTF::dupCloseOnExec):
(WTF::setNonBlock):
* wtf/unix/UniStdExtrasUnix.cpp: Renamed from Source/WTF/wtf/UniStdExtras.cpp.
(WTF::setNonBlock):
Move UniStdExtras to unix/, add a PlayStation version that doesn't use fcntl, add an abstraction for O_NONBLOCK.


Canonical link: https://commits.webkit.org/212182@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245606 268f45cc-cd09-0410-ab3c-d52691b4dbfc