Source/WTF/wtf/PlatformGTK.cmake
@@ -17,8 +17,6 @@ if (CMAKE_SYSTEM_NAME MATCHES "Linux")
 endif ()
 
 list(APPEND WTF_SOURCES
-    UniStdExtras.cpp
-
     generic/MainThreadGeneric.cpp
     generic/WorkQueueGeneric.cpp
 
@@ -35,6 +33,7 @@ list(APPEND WTF_SOURCES
 
     unix/CPUTimeUnix.cpp
     unix/LanguageUnix.cpp
+    unix/UniStdExtrasUnix.cpp
 )
 
 if (CMAKE_SYSTEM_NAME MATCHES "Linux")
