Source/WTF/wtf/PlatformPlayStation.cmake
@@ -5,6 +5,8 @@ list(APPEND WTF_SOURCES
     generic/RunLoopGeneric.cpp
     generic/WorkQueueGeneric.cpp
 
+    playstation/UniStdExtrasPlayStation.cpp
+
     posix/FileSystemPOSIX.cpp
     posix/OSAllocatorPOSIX.cpp
     posix/ThreadingPOSIX.cpp
